# autoscout24-trends

./: .gitignore  AGENTS.md  LICENSE  README.md  TODO.md  package.json  pnpm-lock.yaml  requirements.txt  skills-lock.json
.github/: copilot-instructions.md
autoscout/: extensions.py  items.py  loaders.py  middlewares.py  pipelines.py  settings.py
autoscout/spiders/: search.py
crawler/: .env.example  README.md  SCHEMA.sql  backfill_screenshots.py  pyproject.toml  requirements.txt  run-cron.sh  run-spiders.py  run-spiders.sh  run_spiders.py  run_spiders.sh  scrapy.cfg
crawler/autoscout/: email.py  exporters.py  extensions.py  items.py  pipelines.py  settings.py
crawler/autoscout/middlewares/: SeleniumBaseAsyncCDPMiddleware.py  SeleniumBaseCDPMiddleware.py  __init__.py
crawler/autoscout/spiders/: search.py
crawler/autoscout24_crawler.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
crawler/migrations/: 001_add_search_runs.sql  001_add_searches_table.sql  002_add_config_table.sql  002_add_screenshot_column.sql
crawler/searches/: rs6.env
frontend/: CHART_REVIEW.md  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/app/[searchName]/: page.js
frontend/src/app/api/car-screenshots/[vehicleId]/: route.js
frontend/src/app/api/photos/[carId]/: route.js
frontend/src/app/api/screenshot/[carId]/: route.js
frontend/src/app/search-runs/: page.js
frontend/src/app/search/[searchName]/: page.js
frontend/src/app/settings/: page.js
frontend/src/components/: cars.js  chart-utils.jsx  client-settings.js  daily-listing-count.js  lightbox.js  mileage-price-comparison.js  navbar.js  place-details.js  price-history.js  screenshot-storage.js  search-dropdown.js  search-manager.js  search-runs.js  search-tabs.js
frontend/src/components/ui/: alert-dialog.jsx  button.jsx  card.jsx  chart.jsx  dropdown-menu.jsx  popover.jsx  table.jsx  tooltip.jsx
frontend/src/lib/: actions.js  data.js  format.js  formatter-context.js  r2.js
searches/: rs6.env
src/app/: layout.js  page.js
src/components/: cars.js  daily-listing-count.js  mileage-price-comparison.js
