[project]
name = "autoscout24-crawler"
version = "1.0.0"
description = "AutoScout24 car listings crawler"
requires-python = ">=3.14"
dependencies = [
    "boto3==1.43.21",
    "jinja2==3.1.6",
    "njsparser==2.16",
    "pillow==12.2.0",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.2.2",
    "resend==2.30.1",
    "scrapy==2.16.0",
    "scrapy-seleniumbase-cdp==2.0.4",
    "seleniumbase==4.49.5",
]

[build-system]
requires = ["setuptools==75.9.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["autoscout*"]

[tool.uv]
# njsparser==2.16 declares rich<15 but works fine with rich 15; seleniumbase
# requires rich>=15. Override so uv resolves to rich 15.x.
override-dependencies = ["rich>=15.0.0,<16"]
